#  any later version.
#
#  CLIgen is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with CLIgen; see the file COPYING.

Allow CR/LF in help-texts
	
R3.5.0 December 2014
====================

Extended type system with signed and unsigned ints: int8, int16,
int32, int64, uint8, uint16, uint32, uint64.
You need to to the following in your code:
Rename all cligen syntax types.
        int      -> int32
        number   -> int32
For example in cli syntax files: <x:int> -> <x:int32>.
'int' will remain as an alias for int32.

Rename types :
	CGV_INT  -> CGV_INT32
	CGV_LONG -> CGV_INT64
Rename cv access functions:
	 cv_int_get -> cv_int32_get
	 cv_int_set -> cv_int32_set
	 cv_long_get -> cv_int64_get
	 cv_long_set -> cv_int64_set
For the new int types, see Section 5.1 in the CLIgen tutorial

A new decimal64 type is added. Decimal64 defined in the YANG standard
(RFC6020) is a 64-bit integer with a fraction-index numbers defining a
number of decimals. For example, a decimal64 with 4 fraction-index is
written as: 123.4567. Ranges allowed for decimal64 as well.

Autoheader support. clicon_config.h.in may be generated by autoheader,
but is still part of the release.

Cligen variable vectors (cvec) extended with 'name'. New functions:
	char *cvec_name_get(cvec *vr);
	char *cvec_name_set(cvec *vr, char *name);

A new module: cligen_buf.[ch] is added. This adds a simple variable buffer allocation
(cbuf) functionality. Example:
	cbuf *cb = cbuf_new();
	cprintf(cb, "%d %s", 43, "go");
        write(1, cbuf_get(cb), cbuf_len(cb)) < 0)
        cbuf_free(cb);

The string type is extended with a length keyword. This adds the
possibility to limit the length of a string. Example: <s:string