@@ -1087,8 +1087,10 @@ keypair     : NAME '(' ')' { _YA->ya_var->co_expand_fn_str = $1; }
 
 choices     : NUMBER { $$ = $1;}
             | NAME { $$ = $1;}
+            | DECIMAL { $$ = $1;}
             | choices '|' NUMBER { $$ = cgy_choice_merge(_ya, $1, $3); free($3);}
             | choices '|' NAME { $$ = cgy_choice_merge(_ya, $1, $3); free($3);}
+            | choices '|' DECIMAL { $$ = cgy_choice_merge(_ya, $1, $3); free($3);}
             ;
 
 charseq    : charseq CHAR 
